# backend

./: .gitignore  README.md  calypte-monorepo.code-workspace  pyproject.toml
backend/apps/calypte_api/: .env.example  README.md  pyproject.toml
backend/apps/calypte_api/calypte_api/: main.py  manage.py
backend/apps/calypte_api/calypte_api/calypte_api/: asgi.py  models.py  settings.py  urls.py  wsgi.py
backend/apps/calypte_api/calypte_api/calypte_user/: admin.py  apps.py  factories.py  models.py
backend/apps/calypte_api/calypte_api/calypte_user/migrations/: 0001_initial.py
backend/apps/calypte_api/calypte_api/common/: __init__.py  authorization.py  commands.py  databases.py  dependencies.py  error_schemas.py  exeptions.py  models.py  settings.py  uow.py
backend/apps/calypte_api/calypte_api/deployment/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/deployment_task/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/device/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/device_group/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/devices/: __init__.py  models.py  repositories.py  repository.py  schemas.py  service.py  uow.py
backend/apps/calypte_api/calypte_api/firmware/: __init__.py  commands.py  models.py  repositories.py  repository.py  schemas.py  serivce.py  service.py  uow.py  validators.py
backend/apps/calypte_api/calypte_api/firmware_file/: apps.py
backend/apps/calypte_api/calypte_api/firmware_info/: __init__.py  admin.py  apps.py  factories.py  models.py  repository.py  schemas.py  serializers.py  service.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/groups/: models.py  repositories.py  repository.py  schemas.py  service.py  uow.py  validators.py
backend/apps/calypte_api/calypte_api/protocol/: admin.py  models.py
backend/apps/calypte_api/calypte_api/tag/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/calypte_api/calypte_api/tags/: models.py  repository.py  schemas.py  service.py
backend/apps/calypte_api/calypte_api/task_log_record/: admin.py  apps.py  factories.py  models.py
backend/apps/calypte_api/calypte_api/task_status/: admin.py  apps.py  factories.py  models.py
backend/apps/calypte_api/calypte_api/types/: __init__.py  models.py  repositories.py  repository.py  schemas.py  service.py  uow.py  validators.py
backend/apps/calypte_api/tests/functional/: conftest.py
backend/apps/lota_api/: pyproject.toml
(+51 files in other folders)
