[tool.poetry]
name = "calypte-api"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"
packages = [{ include = "calypte_api" }]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.11"
fastapi-limiter = "^0.1.5"
redis = "^4.6.0"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
fastapi-filter = "^1.0.0"
aiohttp = "3.9.0b0"
miniopy-async = "^1.16"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pytest = "7.3.2"
ipython = "^8.17.2"
types-redis = "^4.6.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
