[tool.poetry]
name = "lota-api"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"
packages = [{ include = "lota_api" }]

[tool.poetry.dependencies]
python = "~3.12"
redis = "^5.0.1"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
python-jose = "^3.3.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-exporter-jaeger = "^1.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
